--- a/PmProject-SPA/src/app/nav/nav.component.html
+++ b/PmProject-SPA/src/app/nav/nav.component.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }">
 
       <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
-        <li class="nav-item" routerLinkActive="active">
+        <!-- <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/members']">Matches</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
@@ -18,7 +18,7 @@
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/messages']">Messages</a>
-        </li>
+        </li> -->
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/company']">Company</a>
         </li>
