--- a/PmProject-SPA/src/app/project/project.component.html
+++ b/PmProject-SPA/src/app/project/project.component.html
@@ -61,7 +61,7 @@
                 <ng-container matColumnDef="serviceOrder">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>Service </th>
                   <td mat-cell *matCellDef="let element" data-label="Service">
-                    <a (click)="serviceOrder(element.id)">Service</a> </td>
+                    <a (click)="serviceOrder(element.id)"><i class="fas fa-folder-plus"></i> Service</a> </td>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
