--- a/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
+++ b/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
@@ -8,13 +8,16 @@
         <div class="form-group row">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Service Order</label>
           <div class="col-sm-10">
-            <input type="text" [(ngModel)]="serviceOrder.serviceOrderNo" class="form-control">
+            <!-- <input type="text" [(ngModel)]="serviceOrder.serviceOrderNo" readonly class="form-control"> -->
+            <!-- <label class="form-control">{{serviceOrder.serviceOrderNo}}</label> -->
+            <div class="form-control">{{serviceOrder.serviceOrderNo}}</div>
           </div>
         </div>
         <div class="form-group row">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Description</label>
           <div class="col-sm-10">
-            <input type="text" [(ngModel)]="serviceOrder.description" class="form-control">
+            <!-- <input type="text" disabled [(ngModel)]="serviceOrder.description" class="form-control"> -->
+            <div class="form-control">{{serviceOrder.description}}</div>
           </div>
         </div>
         <div class="row mb-3">
@@ -32,8 +35,9 @@
                     <div class="form-row">
                       <div class="form-group col-md-12">
                         <label for="inputEmail4">{{question.name}}</label>
-                        <input type="text" (change)="setAnswerText(question.id, $event.target.value)"
-                          [ngModel]="answerText(question.id)" class="form-control" id="inputEmail4">
+                        <!-- <input disabled type="text" (change)="setAnswerText(question.id, $event.target.value)"
+                          [ngModel]="answerText(question.id)" class="form-control" id="inputEmail4"> -->
+                        <div class="form-control">{{answerText(question.id)}}</div>
                       </div>
                     </div>
                   </ng-container>
@@ -48,7 +52,7 @@
                         <div *ngFor="let answer of question.templateServiceOrderAnswer">
                           <mat-radio-group (change)="setAnswerOne(question.id, $event)"
                             [ngModel]="answerOne(question.id)">
-                            <mat-radio-button [value]="answer.id">{{answer.answer}}</mat-radio-button>
+                            <mat-radio-button disabled [value]="answer.id">{{answer.answer}}</mat-radio-button>
                           </mat-radio-group>
                         </div>
                       </div>
@@ -63,8 +67,8 @@
                     <div class="form-row">
                       <div class="form-group col-md-12">
                         <div *ngFor="let answer of question.templateServiceOrderAnswer">
-                          <mat-checkbox (change)="setAnswerMany(question.id, answer.id, $event.checked)"
-                            [ngModel]="answerMany(question.id, answer.id)" class="example-margin mr-2">
+                          <mat-checkbox disabled [ngModel]="answerMany(question.id, answer.id)"
+                            class="example-margin mr-2">
                             {{answer.answer}}
                           </mat-checkbox>
                         </div>
@@ -76,7 +80,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="form-group row">
+        <div class="form-group row">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Upload Image</label>
           <div class="col-sm-10">
             <div class="custom-file">
@@ -106,16 +110,22 @@
           <label for="inputEmail3" class="col-sm-2 col-form-label">Customer Signature</label>
           <div class="col-sm-8 text-center">
             <div class="signature-pad">
-              <div class="signature-pad--body">
-                <canvas #sPad width="250rem;" height="200"
-                  style="touch-action: none; background-color: honeydew;"></canvas>
-              </div>
+              <!-- <div class="signature-pad--body">
+                <canvas #sPad height="200"
+                  style="touch-action: none; background-color: honeydew; max-width: 280px; max-height: 200px;"></canvas>
+              </div> -->
             </div>
           </div>
           <div class="col-sm-2  clo-12 text-right">
             <button class="btn btn-danger" (click)="clear()">Clear</button>
           </div>
-        </div> -->
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <canvas #sPad
+              style="touch-action: none; background-color: honeydew; max-width: 280px; max-height: 200px;"></canvas>
+          </div>
+        </div>
         <div class="form-group row">
           <div class="col-sm-12 text-center">
             <button type="button " (click)="seve()" class="btn  btn-success mr-2">Save</button>
