--- a/PmProject-SPA/src/app/service-order/service-order.component.html
+++ b/PmProject-SPA/src/app/service-order/service-order.component.html
@@ -66,7 +66,7 @@
                 <ng-container matColumnDef="action">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td class="text-right" mat-cell *matCellDef="let element ">
-                    <button type="button " (click)="edit(element.projectId)"
+                    <button type="button " (click)="edit(element.id, element.projectId)"
                       class="btn btn-sm btn-success mr-2">Edit</button>
                     <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">Delete</button>
                   </td>
