--- a/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
+++ b/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
@@ -122,7 +122,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12">
-            <canvas #sPad
+            <canvas #sPad width="280" height="200"
               style="touch-action: none; background-color: honeydew; max-width: 280px; max-height: 200px;"></canvas>
           </div>
         </div>
