--- a/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.css
+++ b/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.css
@@ -5,3 +5,8 @@
 ::ng-deep .mat-radio-button.mat-radio-disabled .mat-radio-label-content {
     color: black !important;
 }
+
+
+canvas {
+  width: 100%;
+}
