--- a/PmProject-SPA/src/app/project/export/export.component.html
+++ b/PmProject-SPA/src/app/project/export/export.component.html
@@ -2,7 +2,7 @@
   <div class="container mt-5">
     <div class="card">
       <div class="card-header">
-        Export Project / Company A
+        Export Project
       </div>
       <div class="card-body">
         <div class="row">
