--- a/PmProject-SPA/src/app/project/project.component.html
+++ b/PmProject-SPA/src/app/project/project.component.html
@@ -8,7 +8,7 @@
   <div class="container mt-5">
     <div class="card">
       <div class="card-header">
-        Project / Company A
+        Project
       </div>
       <div class="card-body">
         <div class="row">
