--- a/PmProject-SPA/src/app/service-order/service-order.component.html
+++ b/PmProject-SPA/src/app/service-order/service-order.component.html
@@ -8,7 +8,7 @@
   <div class="container mt-5">
     <div class="card">
       <div class="card-header">
-        Service Order / Company A
+        Service Order
       </div>
       <div class="card-body">
         <div class="row">
