--- a/PmProject-SPA/src/app/template-service-order/template-service-order.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="card">
     <div class="card-header">
-      Template Service Order / Company A
+      Template Service Order
     </div>
     <div class="card-body">
       <div class="row">
