--- a/PmProject-SPA/src/app/register/register.component.html
+++ b/PmProject-SPA/src/app/register/register.component.html
@@ -27,20 +27,28 @@
         </div>
 
         <div class="form-group">
-          <select formControlName="roleId" class="form-control" id="status">
+          <select [ngClass]="{'is-invalid': registerForm.get('fullName').errors
+          && registerForm.get('fullName').touched}" formControlName="fullName" class="form-control" id="status">
             <option selected>Role</option>
             <option value="1">Admin</option>
             <option value="2">Technician</option>
           </select>
+          <div class="invalid-feedback">Please choose a Full Name</div>
+        </div>
+
+        <div class="form-group">
+          <input type="text" [ngClass]="{'is-invalid': registerForm.get('fullName').errors
+              && registerForm.get('fullName').touched}" class="form-control is-invalid" formControlName="fullName"
+            placeholder="Full Name">
+          <div class="invalid-feedback">Please choose a Full Name</div>
         </div>
 
         <div class="form-group">
           <input type="text" [ngClass]="{'is-invalid': registerForm.get('username').errors
               && registerForm.get('username').touched}" class="form-control is-invalid" formControlName="username"
             placeholder="Username">
-          <div class="invalid-feedback">Please choose a username</div>
+          <div class="invalid-feedback">Please choose a User Name</div>
         </div>
-
 
         <!-- <div class="form-group">
           <input [ngClass]="{'is-invalid': registerForm.get('knownAs').errors && registerForm.get('knownAs').touched}"
