--- a/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
+++ b/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
@@ -8,16 +8,26 @@
         <div class="form-group row">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Service Order</label>
           <div class="col-sm-10">
-            <!-- <input type="text" [(ngModel)]="serviceOrder.serviceOrderNo" readonly class="form-control"> -->
-            <!-- <label class="form-control">{{serviceOrder.serviceOrderNo}}</label> -->
             <div class="form-control">{{serviceOrder.serviceOrderNo}}</div>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Description</label>
+          <div class="col-sm-10">
+            <div class="form-control">{{serviceOrder.description}}</div>
           </div>
         </div>
         <div class="form-group row">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Description</label>
           <div class="col-sm-10">
-            <!-- <input type="text" disabled [(ngModel)]="serviceOrder.description" class="form-control"> -->
-            <div class="form-control">{{serviceOrder.description}}</div>
+            <select [(ngModel)]="serviceOrder.status" class="form-control" id="status">
+              <option selected>Choose...</option>
+              <option value="0">Open</option>
+              <option value="1">In Process</option>
+              <option value="2">Hold</option>
+              <option value="3">Close</option>
+            </select>
           </div>
         </div>
         <div class="row mb-3">
