--- a/PmProject-SPA/src/app/company/company.component.html
+++ b/PmProject-SPA/src/app/company/company.component.html
@@ -1,34 +1,69 @@
 <div class="container mt-5">
-    <table datatable class="table table-striped hover" [dtOptions]="dtOptions">
-      <thead>
-        <tr>
-          <th>
-            Company Name
-          </th>
-          <th width="15%">Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let company of companies">
-          <td>
-            {{company.name}}
-          </td>
-          <td>
-            <button class="ิbtn btn-info" [routerLink]="['/members']">Edit</button>
-          </td>
-        </tr>
-      </tbody> 
-    </table>
-  
+  <!-- <div class="row mb-4">
+    <div class="col">
+      <h3>Company A</h3>
+    </div>
+  </div> -->
+
+  <div class="container mt-5">
+    <div class="card">
+      <div class="card-header">
+        Company
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-6">
+            <button type="button " (click)="openDialog()" class="btn btn-success mr-2">New Company</button>
+            <button type="button" (click)="deleteSelected()" class="btn btn-danger">Delete</button>
+          </div>
+          <div class="col-6 text-right">
+            <mat-form-field>
+              <mat-label>search</mat-label>
+              <input matInput (keyup)="applyFilter($event)" placeholder="search" #input>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col">
+            <div class="mat-elevation-z8">
+              <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+                <!-- Checkbox Column -->
+                <ng-container matColumnDef="select">
+                  <th style="width: 10%;" *matHeaderCellDef mat-header-cell>
+                    <mat-checkbox (change)="$event ? masterToggle() : null"
+                      [checked]="selection?.hasValue() && isAllSelected()"
+                      [indeterminate]="selection?.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                    </mat-checkbox>
+                  </th>
+                  <td mat-cell *matCellDef="let row">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection?.toggle(row) : null"
+                      [checked]="selection?.isSelected(row)" [aria-label]="checkboxLabel(row)">
+                    </mat-checkbox>
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="name">
+                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Project Name </th>
+                  <td mat-cell *matCellDef="let element" data-label="Project Name"> {{element.name}} </td>
+                </ng-container>
+                <ng-container matColumnDef="action">
+                  <th mat-header-cell *matHeaderCellDef> </th>
+                  <td class="text-right" mat-cell *matCellDef="let element ">
+                    <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">Edit</button>
+                    <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">Delete</button>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+                </tr>
+              </table>
+              <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
-<!-- <div class="d-flex justify-content-center">
-  <pagination
-      [boundaryLinks]="true"
-      [totalItems]="pagination.totalItems"
-      [(ngModel)]="pagination.currentPage"
-      [itemsPerPage]="pagination.itemsPerPage"
-      (pageChanged)="pageChanged($event)"
-    previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
-  
-  </pagination>
-</div> -->
