--- a/PmProject-SPA/src/app/technician/technician.component.html
+++ b/PmProject-SPA/src/app/technician/technician.component.html
@@ -8,12 +8,12 @@
   <div class="container mt-5">
     <div class="card">
       <div class="card-header">
-        Company
+        Technician
       </div>
       <div class="card-body">
         <div class="row">
           <div class="col-6">
-            <button type="button " (click)="openDialog()" class="btn btn-success mr-2">New Company</button>
+            <button type="button " (click)="openDialog()" class="btn btn-success mr-2">New Technician</button>
             <button type="button" (click)="deleteSelected()" class="btn btn-danger">Delete</button>
           </div>
           <div class="col-6 text-right">
@@ -43,9 +43,27 @@
                 </ng-container>
 
                 <ng-container matColumnDef="name">
-                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Company Name </th>
+                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Project Name </th>
                   <td mat-cell *matCellDef="let element" data-label="Project Name"> {{element.name}} </td>
                 </ng-container>
+
+                <ng-container matColumnDef="templateServiceOrder">
+                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Use Template Name </th>
+                  <td mat-cell *matCellDef="let element" data-label="Use Template Name">
+                    {{element.templateServiceOrder.name}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="export">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Export </th>
+                  <td mat-cell *matCellDef="let element" data-label="Export">
+                    <a (click)="export(element.id)">Export</a> </td>
+                </ng-container>
+                <ng-container matColumnDef="serviceOrder">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Service </th>
+                  <td mat-cell *matCellDef="let element" data-label="Service">
+                    <a (click)="serviceOrder(element.id)"><i class="fas fa-folder-plus"></i> Service</a> </td>
+                </ng-container>
+
                 <ng-container matColumnDef="action">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td class="text-right" mat-cell *matCellDef="let element ">
