--- a/PmProject-SPA/src/app/company/company.component.html
+++ b/PmProject-SPA/src/app/company/company.component.html
@@ -44,7 +44,7 @@
 
                 <ng-container matColumnDef="name">
                   <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Company Name </th>
-                  <td mat-cell *matCellDef="let element" data-label="Project Name"> {{element.name}} </td>
+                  <td mat-cell *matCellDef="let element" data-label="Company Name"> {{element.name}} </td>
                 </ng-container>
                 <ng-container matColumnDef="action">
                   <th mat-header-cell *matHeaderCellDef> </th>
