--- a/PmProject-SPA/src/app/technician/technician.component.html
+++ b/PmProject-SPA/src/app/technician/technician.component.html
@@ -43,25 +43,14 @@
                 </ng-container>
 
                 <ng-container matColumnDef="name">
-                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Project Name </th>
-                  <td mat-cell *matCellDef="let element" data-label="Project Name"> {{element.name}} </td>
+                  <th style="width: 50%;" mat-header-cell *matHeaderCellDef mat-sort-header>Name </th>
+                  <td mat-cell *matCellDef="let element" data-label="Technician Name"> {{element.fullName}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="templateServiceOrder">
-                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>Use Template Name </th>
+                <ng-container matColumnDef="phoneNumber">
+                  <th style="width: 20%;" mat-header-cell *matHeaderCellDef mat-sort-header>Phone Number </th>
                   <td mat-cell *matCellDef="let element" data-label="Use Template Name">
-                    {{element.templateServiceOrder.name}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="export">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Export </th>
-                  <td mat-cell *matCellDef="let element" data-label="Export">
-                    <a (click)="export(element.id)">Export</a> </td>
-                </ng-container>
-                <ng-container matColumnDef="serviceOrder">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Service </th>
-                  <td mat-cell *matCellDef="let element" data-label="Service">
-                    <a (click)="serviceOrder(element.id)"><i class="fas fa-folder-plus"></i> Service</a> </td>
+                    {{element.phoneNumber}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
