--- a/PmProject-SPA/src/app/user-management/user-management.component.html
+++ b/PmProject-SPA/src/app/user-management/user-management.component.html
@@ -48,8 +48,8 @@
                 <ng-container matColumnDef="action">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td class="text-right" mat-cell *matCellDef="let element ">
-                    <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">Update
-                      Password</button>
+                    <!-- <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">Update
+                      Password</button> -->
                     <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">Delete</button>
                   </td>
                 </ng-container>
