--- a/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
+++ b/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="inputEmail3" class="col-sm-2 col-form-label">Description</label>
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Status</label>
           <div class="col-sm-10">
             <select [(ngModel)]="serviceOrder.status" class="form-control" id="status">
               <option selected>Choose...</option>
@@ -137,7 +137,7 @@
         <div class="form-group row">
           <div class="col-sm-12 text-center">
             <button type="button " (click)="seve()" class="btn  btn-success mr-2">Save</button>
-            <button type="button" class="btn  btn-danger" [routerLink]="['/serviceOrder']">Cancel</button>
+            <button type="button" class="btn  btn-danger" [routerLink]="['/service-order/technician']">Cancel</button>
           </div>
         </div>
       </div>
