--- a/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
+++ b/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
@@ -144,28 +144,10 @@
     </div>
   </div>
 
-</div>
-
-
-<!-- <h1 class="text-center">Angular 9 Signature Pad</h1>
-<div class="signature-pad">
-  <div class="signature-pad--body">
-    <canvas #sPad width="900" height="600" style="touch-action: none;"></canvas>
+  <div>
+    <button (click)="compressFile()">Upload and compress Image</button>
+    <img *ngIf="imgResultBeforeCompress" [src]="imgResultBeforeCompress" alt="">
+    <img *ngIf="imgResultAfterCompress" [src]="imgResultAfterCompress" alt="">
   </div>
+
 </div>
-<br>
-<br>
-<section class="container-fluid">
-  <div class="row">
-    <div class="col-6">
-      <button class="btn btn-block btn-danger" (click)="clear()">Clear</button>
-      <button class="btn btn-block btn-warning" (click)="undo()">Undo</button>
-      <button class="btn btn-block btn-info" (click)="changeColor()">Change Color</button>
-    </div>
-    <div class="col-6">
-      <button class="btn btn-block btn-success" (click)="savePNG()">PNG</button>
-      <button class="btn btn-block btn-primary" (click)="saveJPG()">JPG</button>
-      <button class="btn btn-block btn-secondary" (click)="saveSVG()">SVG</button>
-    </div>
-  </div>
-</section> -->
