--- a/PmProject-SPA/src/app/register/register.component.html
+++ b/PmProject-SPA/src/app/register/register.component.html
@@ -30,10 +30,11 @@
           <select [ngClass]="{'is-invalid': registerForm.get('fullName').errors
           && registerForm.get('fullName').touched}" formControlName="fullName" class="form-control" id="status">
             <option selected>Role</option>
-            <option value="1">Admin</option>
-            <option value="2">Technician</option>
+            <option value="1">Super Admin</option>
+            <option value="2">Admin</option>
+            <option value="3">Technician</option>
           </select>
-          <div class="invalid-feedback">Please choose a Full Name</div>
+          <div class="invalid-feedback">Please choose a Role</div>
         </div>
 
         <div class="form-group">
