--- a/PmProject-SPA/src/app/template-service-order/template-service-order.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order.component.html
@@ -1,18 +1,18 @@
 <div class="container mt-5">
   <div class="card">
     <div class="card-header">
-      Template Service Order
+      แบบฟอร์มเอกสารใบสั่งงาน
     </div>
     <div class="card-body">
       <div class="row">
         <div class="col-6">
-          <button type="button " [routerLink]="['/template/add']" class="btn btn-success mr-2">New Template</button>
-          <button type="button" (click)="deleteSelected()" class="btn btn-danger">Delete</button>
+          <button type="button " [routerLink]="['/template/add']" class="btn btn-success mr-2">สร้างแบบฟอร์ม</button>
+          <button type="button" (click)="deleteSelected()" class="btn btn-danger">ลบแบบฟอร์ม</button>
         </div>
         <div class="col-6 text-right">
           <mat-form-field>
-            <mat-label>search</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="search" #input>
+            <mat-label>ค้นหา</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="ค้นหา" #input>
           </mat-form-field>
         </div>
       </div>
@@ -37,7 +37,7 @@
 
               <!-- Name Column -->
               <ng-container matColumnDef="name">
-                <th style="width: 70%;" mat-header-cell *matHeaderCellDef mat-sort-header>Template Name </th>
+                <th style="width: 70%;" mat-header-cell *matHeaderCellDef mat-sort-header>ชื่อแบบฟอร์ม </th>
                 <td mat-cell *matCellDef="let element" data-label="Template Name"> {{element.name}} </td>
               </ng-container>
 
@@ -45,8 +45,8 @@
               <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef> </th>
                 <td class="text-right" mat-cell *matCellDef="let element ">
-                  <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">Edit</button>
-                  <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">Delete</button> </td>
+                  <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">แก้ไข</button>
+                  <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">ลบ</button> </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
