--- a/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
+++ b/PmProject-SPA/src/app/service-order-technician/service-order-technician-edit/service-order-technician-edit.component.html
@@ -144,10 +144,10 @@
     </div>
   </div>
 
-  <div>
+  <!-- <div>
     <button (click)="compressFile()">Upload and compress Image</button>
     <img *ngIf="imgResultBeforeCompress" [src]="imgResultBeforeCompress" alt="">
     <img *ngIf="imgResultAfterCompress" [src]="imgResultAfterCompress" alt="">
-  </div>
+  </div> -->
 
 </div>
